# kobuki

./: CMakeLists.txt  README.md  package.xml  thirdparty.repos
.github/workflows/: jazzy-devel.yaml  jazzy.yaml  main.yaml
config/: footprint_filter.yaml  kobuki_nav_params.yaml  kobuki_node_params.yaml  kobuki_sim_nav_params.yaml
config/bridge/: kobuki_bridge.yaml
include/kobuki/: FakeBumper.hpp
launch/: kobuki.launch.py  navigation.launch.py  navigation_sim.launch.py  simulation.launch.py  spawn.launch.py
maps/: GrannieAnnie.yaml  dmarce_map.pgm  dmarce_map.yaml  lab.pgm  lab.yaml  lab_robocup.pgm  lab_robocup.yaml  map_1704984627.pgm  map_1704984627.yaml  mapa_uni.yaml
src/: fake_bumper_node.cpp
src/kobuki/: FakeBumper.cpp
worlds/: GrannyAnnie.world
